src/cimgui_ext/include/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImTextureRef_t ImTextureRef;
typedef unsigned int ImGuiID;      
typedef unsigned long long ImU64;  
typedef struct ImGuiStorage_t ImGuiStorage;                                    
typedef int ImGuiDir;             
typedef int ImGuiButtonFlags;       
typedef int ImGuiComboFlags;        
typedef ImU64 ImTextureID;  
CIMGUI_API void    ImGui_PushID(const char* str_id);                                   
CIMGUI_API void    ImGui_PushIDStr(const char* str_id_begin, const char* str_id_end);  
CIMGUI_API void    ImGui_PushIDPtr(const void* ptr_id);                                
CIMGUI_API void    ImGui_PushIDInt(int int_id);                                        
CIMGUI_API void    ImGui_PopID(void);                                                  
CIMGUI_API ImGuiID ImGui_GetID(const char* str_id);                                    
CIMGUI_API ImGuiID ImGui_GetIDStr(const char* str_id_begin, const char* str_id_end);
CIMGUI_API ImGuiID ImGui_GetIDPtr(const void* ptr_id);
CIMGUI_API ImGuiID ImGui_GetIDInt(int int_id);
CIMGUI_API void ImGui_TextUnformatted(const char* text, const char* text_end );        
CIMGUI_API void ImGui_TextColoredUnformatted(ImVec4 col, const char* text);                        
CIMGUI_API void ImGui_TextDisabledUnformatted(const char* text);                                   
CIMGUI_API void ImGui_TextWrappedUnformatted(const char* text);                                    
CIMGUI_API void ImGui_LabelTextUnformatted(const char* label, const char* text);                   
CIMGUI_API void ImGui_BulletTextUnformatted(const char* text);                                     
CIMGUI_API void ImGui_SeparatorText(const char* label);                                            
CIMGUI_API bool ImGui_Button(const char* label, ImVec2 size );                             
CIMGUI_API bool ImGui_SmallButton(const char* label);                                                          
CIMGUI_API bool ImGui_InvisibleButton(const char* str_id, ImVec2 size, ImGuiButtonFlags flags );      
CIMGUI_API bool ImGui_ArrowButton(const char* str_id, ImGuiDir dir);                                           
CIMGUI_API bool ImGui_Checkbox(const char* label, bool* v);
CIMGUI_API bool ImGui_CheckboxFlagsIntPtr(const char* label, int* flags, int flags_value);
CIMGUI_API bool ImGui_CheckboxFlagsUintPtr(const char* label, unsigned int* flags, unsigned int flags_value);
CIMGUI_API bool ImGui_RadioButton(const char* label, bool active);                                             
CIMGUI_API bool ImGui_RadioButtonIntPtr(const char* label, int* v, int v_button);                              
CIMGUI_API void ImGui_ProgressBar(float fraction, ImVec2 size_arg , const char* overlay );
CIMGUI_API void ImGui_Bullet(void);                                                                            
CIMGUI_API bool ImGui_TextLink(const char* label);                                                             
CIMGUI_API bool ImGui_TextLinkOpenURL(const char* label, const char* url );                        
CIMGUI_API void ImGui_Image(ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0 , ImVec2 uv1 );
CIMGUI_API void ImGui_ImageWithBg(ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0 , ImVec2 uv1 , ImVec4 bg_col , ImVec4 tint_col );
CIMGUI_API bool ImGui_ImageButton(const char* str_id, ImTextureRef tex_ref, ImVec2 image_size, ImVec2 uv0 , ImVec2 uv1 , ImVec4 bg_col , ImVec4 tint_col );
CIMGUI_API bool ImGui_BeginCombo(const char* label, const char* preview_value, ImGuiComboFlags flags );
CIMGUI_API void ImGui_EndCombo(void);                                                                                                                        
CIMGUI_API bool ImGui_ComboChar(const char* label, int* current_item, const char*const items[], int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_Combo(const char* label, int* current_item, const char* items_separated_by_zeros, int popup_max_height_in_items );           
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, const char* (*getter)(void* user_data, int idx), void* user_data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef enum
{
    ImGuiCol_Text,
    ImGuiCol_TextDisabled,
    ImGuiCol_WindowBg,                                                
    ImGuiCol_ChildBg,                                                 
    ImGuiCol_PopupBg,                                                 
    ImGuiCol_Border,
    ImGuiCol_BorderShadow,
    ImGuiCol_FrameBg,                                                 
    ImGuiCol_FrameBgHovered,
    ImGuiCol_FrameBgActive,
    ImGuiCol_TitleBg,                                                 
    ImGuiCol_TitleBgActive,                                           
    ImGuiCol_TitleBgCollapsed,                                        
    ImGuiCol_MenuBarBg,
    ImGuiCol_ScrollbarBg,
    ImGuiCol_ScrollbarGrab,
    ImGuiCol_ScrollbarGrabHovered,
    ImGuiCol_ScrollbarGrabActive,
    ImGuiCol_CheckMark,                                               
    ImGuiCol_SliderGrab,
    ImGuiCol_SliderGrabActive,
    ImGuiCol_Button,
    ImGuiCol_ButtonHovered,
    ImGuiCol_ButtonActive,
    ImGuiCol_Header,                                                  
    ImGuiCol_HeaderHovered,
    ImGuiCol_HeaderActive,
    ImGuiCol_Separator,
    ImGuiCol_SeparatorHovered,
    ImGuiCol_SeparatorActive,
    ImGuiCol_ResizeGrip,                                              
    ImGuiCol_ResizeGripHovered,
    ImGuiCol_ResizeGripActive,
    ImGuiCol_InputTextCursor,                                         
    ImGuiCol_TabHovered,                                              
    ImGuiCol_Tab,                                                     
    ImGuiCol_TabSelected,                                             
    ImGuiCol_TabSelectedOverline,                                     
    ImGuiCol_TabDimmed,                                               
    ImGuiCol_TabDimmedSelected,                                       
    ImGuiCol_TabDimmedSelectedOverline,                               
    ImGuiCol_PlotLines,
    ImGuiCol_PlotLinesHovered,
    ImGuiCol_PlotHistogram,
    ImGuiCol_PlotHistogramHovered,
    ImGuiCol_TableHeaderBg,                                           
    ImGuiCol_TableBorderStrong,                                       
    ImGuiCol_TableBorderLight,                                        
    ImGuiCol_TableRowBg,                                              
    ImGuiCol_TableRowBgAlt,                                           
    ImGuiCol_TextLink,                                                
    ImGuiCol_TextSelectedBg,                                          
    ImGuiCol_TreeLines,                                               
    ImGuiCol_DragDropTarget,                                          
    ImGuiCol_NavCursor,                                               
    ImGuiCol_NavWindowingHighlight,                                   
    ImGuiCol_NavWindowingDimBg,                                       
    ImGuiCol_ModalWindowDimBg,                                        
    ImGuiCol_COUNT,
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiCol_TabActive                 = ImGuiCol_TabSelected,        
    ImGuiCol_TabUnfocused              = ImGuiCol_TabDimmed,          
    ImGuiCol_TabUnfocusedActive        = ImGuiCol_TabDimmedSelected,  
    ImGuiCol_NavHighlight              = ImGuiCol_NavCursor,          
#endif 
} ImGuiCol_;
struct ImGuiStorage_t
{
    ImVector_ImGuiStoragePair Data;
};