src/Editor/LibreLancer.ImUI/ImGuiBindings/Generated/ImGuiNative.cs


    /// <summary>
    /// <para>ID stack/scopes</para>
    /// <para>Read the FAQ (docs/FAQ.md or http://dearimgui.com/faq) for more details about how ID are handled in dear imgui.</para>
    /// <para>- Those questions are answered and impacted by understanding of the ID stack system:</para>
    /// <para>- "Q: Why is my widget not reacting when I click on it?"</para>
    /// <para>- "Q: How can I have widgets with an empty label?"</para>
    /// <para>- "Q: How can I have multiple widgets with the same label?"</para>
    /// <para>- Short version: ID are hashes of the entire ID stack. If you are creating widgets in a loop you most likely</para>
    /// <para>want to push a unique identifier (e.g. object pointer, loop index) to uniquely differentiate them.</para>
    /// <para>- You can also use the "Label##foobar" syntax within widget label to distinguish them from each others.</para>
    /// <para>- In this header file we use the "label"/"name" terminology to denote a string that will be displayed + used as an ID,</para>
    /// <para>whereas "str_id" denote a string that is only used as an ID and not normally displayed.</para>
    /// push string into the ID stack (will hash string).
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushID(byte* str_id);

    /// <summary>
    /// push string into the ID stack (will hash string).
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushIDStr(byte* str_id_begin, byte* str_id_end);

    /// <summary>
    /// push pointer into the ID stack (will hash pointer).
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushIDPtr(IntPtr ptr_id);

    /// <summary>
    /// push integer into the ID stack (will hash integer).
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PushIDInt(int int_id);

    /// <summary>
    /// pop from the ID stack.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_PopID();

    /// <summary>
    /// calculate unique ID (hash of whole ID stack + given parameter). e.g. if you want to query into ImGuiStorage yourself
    /// </summary>
    [DllImport("cimgui")]
    public static extern uint ImGui_GetID(byte* str_id);

    [DllImport("cimgui")]
    public static extern uint ImGui_GetIDStr(byte* str_id_begin, byte* str_id_end);

    [DllImport("cimgui")]
    public static extern uint ImGui_GetIDPtr(IntPtr ptr_id);

    [DllImport("cimgui")]
    public static extern uint ImGui_GetIDInt(int int_id);

    /// <summary>
    /// <para>Widgets: Text</para>
    /// raw text without formatting. Roughly equivalent to Text("%s", text) but: A) doesn't require null terminated string if 'text_end' is specified, B) it's faster, no memory copy is done, no buffer size limits, recommended for long chunks of text.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TextUnformatted(byte* text, byte* text_end);

    /// <summary>
    /// shortcut for PushStyleColor(ImGuiCol_Text, col); Text(fmt, ...); PopStyleColor();
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TextColoredUnformatted(System.Numerics.Vector4 col, byte* text);

    /// <summary>
    /// shortcut for PushStyleColor(ImGuiCol_Text, style.Colors[ImGuiCol_TextDisabled]); Text(fmt, ...); PopStyleColor();
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TextDisabledUnformatted(byte* text);

    /// <summary>
    /// shortcut for PushTextWrapPos(0.0f); Text(fmt, ...); PopTextWrapPos();. Note that this won't work on an auto-resizing window if there's no other widgets to extend the window width, yoy may need to set a size using SetNextWindowSize().
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TextWrappedUnformatted(byte* text);

    /// <summary>
    /// display text+label aligned the same way as value+label widgets
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_LabelTextUnformatted(byte* label, byte* text);

    /// <summary>
    /// shortcut for Bullet()+Text()
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_BulletTextUnformatted(byte* text);

    /// <summary>
    /// currently: formatted text with a horizontal line
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SeparatorText(byte* label);

    /// <summary>
    /// <para>Widgets: Main</para>
    /// <para>- Most widgets return true when the value has been changed or when pressed/selected</para>
    /// <para>- You may also use one of the many IsItemXXX functions (e.g. IsItemActive, IsItemHovered, etc.) to query widget state.</para>
    /// button
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_Button(byte* label, System.Numerics.Vector2 size);

    /// <summary>
    /// button with (FramePadding.y == 0) to easily embed within text
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_SmallButton(byte* label);

    /// <summary>
    /// flexible button behavior without the visuals, frequently useful to build custom behaviors using the public api (along with IsItemActive, IsItemHovered, etc.)
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_InvisibleButton(byte* str_id, System.Numerics.Vector2 size, ImGuiButtonFlags flags);

    /// <summary>
    /// square button with an arrow shape
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_ArrowButton(byte* str_id, ImGuiDir dir);

    [DllImport("cimgui")]
    public static extern byte ImGui_Checkbox(byte* label, byte* v);

    [DllImport("cimgui")]
    public static extern byte ImGui_CheckboxFlagsIntPtr(byte* label, int* flags, int flags_value);

    [DllImport("cimgui")]
    public static extern byte ImGui_CheckboxFlagsUintPtr(byte* label, uint* flags, uint flags_value);

    /// <summary>
    /// use with e.g. if (RadioButton("one", my_value==1)) { my_value = 1; }
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_RadioButton(byte* label, byte active);

    /// <summary>
    /// shortcut to handle the above pattern when value is an integer
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_RadioButtonIntPtr(byte* label, int* v, int v_button);

    [DllImport("cimgui")]
    public static extern void ImGui_ProgressBar(float fraction, System.Numerics.Vector2 size_arg, byte* overlay);

    /// <summary>
    /// draw a small circle + keep the cursor on the same line. advance cursor x position by GetTreeNodeToLabelSpacing(), same distance that TreeNode() uses
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_Bullet();

    /// <summary>
    /// hyperlink text button, return true when clicked
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_TextLink(byte* label);

    /// <summary>
    /// hyperlink text button, automatically open file/url when clicked
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_TextLinkOpenURL(byte* label, byte* url);

    /// <summary>
    /// <para>Widgets: Images</para>
    /// <para>- Read about ImTextureID/ImTextureRef  here: https://github.com/ocornut/imgui/wiki/Image-Loading-and-Displaying-Examples</para>
    /// <para>- 'uv0' and 'uv1' are texture coordinates. Read about them from the same link above.</para>
    /// <para>- Image() pads adds style.ImageBorderSize on each side, ImageButton() adds style.FramePadding on each side.</para>
    /// <para>- ImageButton() draws a background based on regular Button() color + optionally an inner background if specified.</para>
    /// - An obsolete version of Image(), before 1.91.9 (March 2025), had a 'tint_col' parameter which is now supported by the ImageWithBg() function.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_Image(ImTextureRef tex_ref, System.Numerics.Vector2 image_size, System.Numerics.Vector2 uv0, System.Numerics.Vector2 uv1);

    [DllImport("cimgui")]
    public static extern void ImGui_ImageWithBg(ImTextureRef tex_ref, System.Numerics.Vector2 image_size, System.Numerics.Vector2 uv0, System.Numerics.Vector2 uv1, System.Numerics.Vector4 bg_col, System.Numerics.Vector4 tint_col);

    [DllImport("cimgui")]
    public static extern byte ImGui_ImageButton(byte* str_id, ImTextureRef tex_ref, System.Numerics.Vector2 image_size, System.Numerics.Vector2 uv0, System.Numerics.Vector2 uv1, System.Numerics.Vector4 bg_col, System.Numerics.Vector4 tint_col);

    /// <summary>
    /// <para>Widgets: Combo Box (Dropdown)</para>
    /// <para>- The BeginCombo()/EndCombo() api allows you to manage your contents and selection state however you want it, by creating e.g. Selectable() items.</para>
    /// - The old Combo() api are helpers over BeginCombo()/EndCombo() which are kept available for convenience purpose. This is analogous to how ListBox are created.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginCombo(byte* label, byte* preview_value, ImGuiComboFlags flags);

    /// <summary>
    /// only call EndCombo() if BeginCombo() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndCombo();

    [DllImport("cimgui")]
    public static extern byte ImGui_ComboChar(byte* label, int* current_item, byte** items, int items_count, int popup_max_height_in_items);

    /// <summary>
    /// Separate items with \0 within a string, end item-list with \0\0. e.g. "One\0Two\0Three\0"
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_Combo(byte* label, int* current_item, byte* items_separated_by_zeros, int popup_max_height_in_items);

    [DllImport("cimgui")]
    public static extern byte ImGui_ComboCallback(byte* label, int* current_item, delegate* unmanaged<IntPtr, int, byte*> getter, IntPtr user_data, int items_count, int popup_max_height_in_items);
